# rules_ecsact

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: ci.bazelrc  ci.yaml  release.yml  workspace_snippet.sh
docs/: BUILD.bazel  rules.md
e2e/bzlmod/: .bazelrc  MODULE.bazel  example.ecsact
e2e/bzlmod-ecsact-sdk/: .bazelrc  BUILD.bazel  MODULE.bazel  example.ecsact
e2e/workspace/: .bazelrc  BUILD  BUILD.bazel  WORKSPACE
ecsact/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
ecsact/private/: BUILD.bazel  ecsact_binary.bzl  ecsact_build_recipe.bzl  ecsact_codegen.bzl  ecsact_codegen_plugin.bzl  ecsact_library.bzl  toolchains_repo.bzl  versions.bzl
ecsact/tests/: versions_test.bzl
