module(
    name = "rules_ecsact",
    version = "0.4.9",
    compatibility_level = 4,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.7")

bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
