module(name = "rules_ecsact_e2e_bzlmod_ecsact_sdk")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_ecsact")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "ecsact_cli", version = "0.3.1")

local_path_override(
    module_name = "rules_ecsact",
    path = "../..",
)

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact")
ecsact.toolchain(use_ecsact_cli = True)
use_repo(ecsact, "ecsact_toolchain")

register_toolchains("@ecsact_toolchain//:all")
