module(name = "rules_ecsact_e2e_bzlmod")

bazel_dep(name = "rules_ecsact")

local_path_override(
    module_name = "rules_ecsact",
    path = "../..",
)

ecsact = use_extension("//ecsact:extensions.bzl", "ecsact")
use_repo(ecsact, "ecsact_toolchains")

register_toolchains("@ecsact_toolchains//:all")
