"""Provides a simple way to test your rules as an external workspace.
Add a basic smoke-test target below.
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")

ecsact_codegen(
    name = "all_default_codegen_plugins",
    srcs = [
        "example.ecsact",
        "extras.ecsact",
    ],
)

build_test(
    name = "smoke_test",
    targets = [
        # targets you add above
        ":all_default_codegen_plugins",
    ],
)
