load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//ecsact:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//ecsact:__subpackages__"],
)

bzl_library(
    name = "ecsact_codegen",
    srcs = ["ecsact_codegen.bzl"],
    visibility = ["//ecsact:__subpackages__"],
)
