load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//ecsact:__subpackages__"],
)

bzl_library(
    name = "ecsact_codegen",
    srcs = [
        "ecsact_codegen.bzl",
        "@ecsact_codegen//:codegen_plugin.bzl",
        "@rules_cc//cc:defs.bzl",
    ],
    visibility = ["//ecsact:__subpackages__"],
)
